Src/sqlite3win32stubs.bas

Private Declare Function sqlite3_errstr Lib "sqlite3win32.dll" (ByVal ResultCode As Long) As Long
Private Declare Function sqlite3_exec Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzSQL As Long, ByVal lpfnCallback As Long, ByVal pArg As Long, ByVal pzErrMsg As Long) As Long
Private Declare Function sqlite3_expanded_sql Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_expired Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_extended_errcode Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_extended_result_codes Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal iOnOff As Long) As Long
Private Declare Function sqlite3_file_control Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzDbName As Long, ByVal Code As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_finalize Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_free Lib "sqlite3win32.dll" (ByVal pMem As Long) As Long
Private Declare Function sqlite3_free_table Lib "sqlite3win32.dll" (ByVal azResult As Long) As Long
Private Declare Function sqlite3_get_autocommit Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_get_auxdata Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal iArg As Long) As Long
Private Declare Function sqlite3_get_table Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzSQL As Long, ByVal pazResult As Long, ByVal pnRow As Long, ByVal pnColumn As Long, ByVal pzErrMsg As Long) As Long
Private Declare Function sqlite3_global_recover Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_initialize Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_interrupt Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_keyword_check Lib "sqlite3win32.dll" (ByVal pzName As Long, ByVal pnName As Long) As Long
Private Declare Function sqlite3_keyword_count Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_keyword_name Lib "sqlite3win32.dll" (ByVal i As Long, ByVal pzName As Long, ByVal pnName As Long) As Long
Private Declare Function sqlite3_last_insert_rowid Lib "sqlite3win32.dll" (ByVal hDB As Long) As Currency
Private Declare Function sqlite3_libversion Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_libversion_number Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_limit Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal LimitID As Long, ByVal NewLimit As Long) As Long
Private Declare Function sqlite3_load_extension Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzFile As Long, ByVal pzProc As Long, ByVal pzErrMsg As Long) As Long
Private Declare Function sqlite3_malloc Lib "sqlite3win32.dll" (ByVal n As Long) As Long
Private Declare Function sqlite3_malloc64 Lib "sqlite3win32.dll" (ByVal n As Currency) As Long
Private Declare Function sqlite3_memory_alarm Lib "sqlite3win32.dll" (ByVal lpfnCallback As Long, ByVal pArg As Long, ByVal iThreshold As Currency) As Long
Private Declare Function sqlite3_memory_highwater Lib "sqlite3win32.dll" (ByVal ResetFlag As Long) As Currency
Private Declare Function sqlite3_memory_used Lib "sqlite3win32.dll" () As Currency
Private Declare Function sqlite3_msize Lib "sqlite3win32.dll" (ByVal pMem As Long) As Currency
Private Declare Function sqlite3_mutex_alloc Lib "sqlite3win32.dll" (ByVal pMtx As Long) As Long
Private Declare Function sqlite3_mutex_enter Lib "sqlite3win32.dll" (ByVal pMtx As Long) As Long
Private Declare Function sqlite3_mutex_free Lib "sqlite3win32.dll" (ByVal pMtx As Long) As Long
Private Declare Function sqlite3_mutex_leave Lib "sqlite3win32.dll" (ByVal pMtx As Long) As Long
Private Declare Function sqlite3_mutex_try Lib "sqlite3win32.dll" (ByVal pMtx As Long) As Long
Private Declare Function sqlite3_next_stmt Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal hStmt As Long) As Long
Private Declare Function sqlite3_open Lib "sqlite3win32.dll" (ByVal pzFilename As Long, ByRef hDB As Long) As Long
Private Declare Function sqlite3_open_v2 Lib "sqlite3win32.dll" (ByVal pzFilename As Long, ByRef hDB As Long, ByVal Flags As Long, ByVal pzVfs As Long) As Long
Private Declare Function sqlite3_open16 Lib "sqlite3win32.dll" (ByVal pzFilename As Long, ByRef hDB As Long) As Long
Private Declare Function sqlite3_os_end Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_os_init Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_overload_function Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzName As Long, ByVal nArg As Long) As Long
Private Declare Function sqlite3_prepare Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzSQL As Long, ByVal nByte As Long, ByRef hStmt As Long, ByVal pzTail As Long) As Long
Private Declare Function sqlite3_prepare_v2 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzSQL As Long, ByVal nByte As Long, ByRef hStmt As Long, ByVal pzTail As Long) As Long
Private Declare Function sqlite3_prepare_v3 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzSQL As Long, ByVal nByte As Long, ByVal PrepFlags As Long, ByRef hStmt As Long, ByVal pzTail As Long) As Long
Private Declare Function sqlite3_prepare16 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzSQL As Long, ByVal nByte As Long, ByRef hStmt As Long, ByVal pzTail As Long) As Long
Private Declare Function sqlite3_prepare16_v2 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzSQL As Long, ByVal nByte As Long, ByRef hStmt As Long, ByVal pzTail As Long) As Long
Private Declare Function sqlite3_prepare16_v3 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzSQL As Long, ByVal nByte As Long, ByVal PrepFlags As Long, ByRef hStmt As Long, ByVal pzTail As Long) As Long
Private Declare Function sqlite3_profile Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal lpfnProfile As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_progress_handler Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal nOps As Long, ByVal lpfnProgress As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_randomness Lib "sqlite3win32.dll" (ByVal n As Long, ByVal pBuf As Long) As Long
Private Declare Function sqlite3_realloc Lib "sqlite3win32.dll" (ByVal pOld As Long, ByVal n As Long) As Long
Private Declare Function sqlite3_realloc64 Lib "sqlite3win32.dll" (ByVal pOld As Long, ByVal n As Currency) As Long
Private Declare Function sqlite3_release_memory Lib "sqlite3win32.dll" (ByVal n As Long) As Long
Private Declare Function sqlite3_reset Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_reset_auto_extension Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_result_blob Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pz As Long, ByVal n As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_result_blob64 Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pz As Long, ByVal n As Currency, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_result_double Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal rValue As Double) As Long
Private Declare Function sqlite3_result_error Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pz As Long, ByVal n As Long) As Long
Private Declare Function sqlite3_result_error_code Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal ErrCode As Long) As Long
Private Declare Function sqlite3_result_error_nomem Lib "sqlite3win32.dll" (ByVal pCtx As Long) As Long
Private Declare Function sqlite3_result_error_toobig Lib "sqlite3win32.dll" (ByVal pCtx As Long) As Long
Private Declare Function sqlite3_result_error16 Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pz As Long, ByVal n As Long) As Long
Private Declare Function sqlite3_result_int Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal iValue As Long) As Long
Private Declare Function sqlite3_result_int64 Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal iValue As Currency) As Long
Private Declare Function sqlite3_result_null Lib "sqlite3win32.dll" (ByVal pCtx As Long) As Long
Private Declare Function sqlite3_result_subtype Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal eSubtype As Long) As Long
Private Declare Function sqlite3_result_text Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pz As Long, ByVal n As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_result_text16 Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pz As Long, ByVal n As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_result_text16be Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pz As Long, ByVal n As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_result_text16le Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pz As Long, ByVal n As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_result_text64 Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pz As Long, ByVal n As Currency, ByVal lpfnDestroy As Long, ByVal Encoding As Byte) As Long
Private Declare Function sqlite3_result_value Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pValue As Long) As Long
Private Declare Function sqlite3_result_pointer Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal pPtr As Long, ByVal pzPType As Long, ByVal lpfnDestroy As Long)
Private Declare Function sqlite3_result_zeroblob Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal n As Long) As Long
Private Declare Function sqlite3_result_zeroblob64 Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal n As Currency) As Long
Private Declare Function sqlite3_rollback_hook Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal lpfnCallback As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_rtree_geometry_callback Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzGeom As Long, ByVal lpfnGeom As Long, ByVal pContext As Long) As Long
Private Declare Function sqlite3_rtree_query_callback Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzQueryFunc As Long, ByVal lpfnQueryFunc As Long, ByVal pContext As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_set_authorizer Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal xAuth As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_set_auxdata Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal iArg As Long, ByVal pAux As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_set_last_insert_rowid Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal iRow As Currency) As Long
Private Declare Function sqlite3_shutdown Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_sleep Lib "sqlite3win32.dll" (ByVal dwMilliseconds As Long) As Long
Private Declare Function sqlite3_soft_heap_limit Lib "sqlite3win32.dll" (ByVal n As Long) As Long
Private Declare Function sqlite3_soft_heap_limit64 Lib "sqlite3win32.dll" (ByVal n As Currency) As Currency
Private Declare Function sqlite3_sourceid Lib "sqlite3win32.dll" () As Long
Private Declare Function sqlite3_sql Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
'Private Declare Function sqlite3_str_new Lib "sqlite3win32.dll"
'Private Declare Function sqlite3_str_finish Lib "sqlite3win32.dll"
'Private Declare Function sqlite3_str_vappendf Lib "sqlite3win32.dll"
'Private Declare Function sqlite3_str_append Lib "sqlite3win32.dll"
'Private Declare Function sqlite3_str_appendall Lib "sqlite3win32.dll"
'Private Declare Function sqlite3_str_appendchar Lib "sqlite3win32.dll"
'Private Declare Function sqlite3_str_reset Lib "sqlite3win32.dll"
'Private Declare Function sqlite3_str_errcode Lib "sqlite3win32.dll"
'Private Declare Function sqlite3_str_length Lib "sqlite3win32.dll"
'Private Declare Function sqlite3_str_value Lib "sqlite3win32.dll"
